log/build_2026-06-11_05-57-25/telemetry_bridge/stdout_stderr.log
[  7%] Built target gtest_main
[  7%] Built target gtest
[  9%] Built target telemetry_bridge__cpp
[ 17%] Built target telemetry_bridge__rosidl_generator_c
[ 21%] Built target latency_test
[ 28%] Built target telemetry_bridge__rosidl_typesupport_cpp
[ 36%] Built target telemetry_bridge__rosidl_typesupport_introspection_cpp
[ 44%] Built target telemetry_bridge__rosidl_typesupport_fastrtps_cpp
[ 51%] Built target telemetry_bridge__rosidl_typesupport_c
[ 59%] Built target telemetry_bridge__rosidl_typesupport_introspection_c
[ 67%] Built target telemetry_bridge__rosidl_typesupport_fastrtps_c
[ 67%] Built target telemetry_bridge
[ 69%] Built target telemetry_bridge__py
Scanning dependencies of target telemetry_bridge_nodes
[ 75%] Built target telemetry_bridge__python
[ 76%] Building CXX object CMakeFiles/telemetry_bridge_nodes.dir/workspace/src/UdpBridgeNode.cpp.o
[ 88%] Built target telemetry_bridge__rosidl_typesupport_introspection_c__pyext
[ 88%] Built target telemetry_bridge__rosidl_typesupport_c__pyext
[ 88%] Built target telemetry_bridge__rosidl_typesupport_fastrtps_c__pyext
[ 90%] Linking CXX shared library libtelemetry_bridge_nodes.so
[ 92%] Built target telemetry_bridge_nodes
Scanning dependencies of target monitor_test
[ 94%] Building CXX object CMakeFiles/monitor_test.dir/workspace/src/tests/monitor_test.cpp.o
/workspace/src/tests/monitor_test.cpp:1:5: error: expected constructor, destructor, or type conversion before ‘(’ token
    1 | TEST(StateMonitorTest, DetectsGapsAndStalePackets)
      |     ^
make[2]: *** [CMakeFiles/monitor_test.dir/build.make:63: CMakeFiles/monitor_test.dir/workspace/src/tests/monitor_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:184: CMakeFiles/monitor_test.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
Scanning dependencies of target udp_bridge
[ 96%] Building CXX object CMakeFiles/udp_bridge.dir/workspace/src/main.cpp.o
[ 98%] Linking CXX executable udp_bridge
[ 98%] Built target udp_bridge
make: *** [Makefile:141: all] Error 2
